data/derived/fa15/progs/unify/prog3356.ml.out
Characters 23-26:
  List.map string_of_int 123;;
                         ^^^
Error: This expression has type int but an expression was expected of type
         int list
